# openuh

./: COPYING.openuh  ChangeLog-v3  HOWTO-INSTALL-OPEN64  INSTALL.cross.ppc  INSTALL.cross.sl  MAINTAINERS  Makefile  Makefile.in  README  README-OpenUH-ACC  README.md  README.openuh  README.openuh-acc  README.openuh-caf  configure  configure.ac  defs.mk  install_compiler.sh  install_compiler_amd.sh  install_compiler_nvidia.sh  open64.spec  openacc-limitation.txt
doc/: DRAGON_SUPPORT_IN_OPENUH  HOW-TO-DEBUG-OPEN64  KernelCompile  PPC32-BACKEND  USING_CAF_SUPPORT
libspin/: Makefile  Makefile.gbase  gspin-alloc.h  gspin-io.c  gspin-io.h  gspin-list.c  gspin-mempool.c  gspin-tel.c  gspin-tel.h  gspin-tree.c  gspin-tree.h
osprey/: Makefile  Makefile.gsetup  Makefile.gsetup.in
osprey-gcc/: configure
osprey-gcc-4.2.0/: configure  configure.in
osprey-gcc-4.2.0/gcc/: Makefile.in  builtin-types.def  c-common.def  c-common.h  c-decl.c  c-omp.c  c-opts.c  c-parser.c  c-ppoutput.c  c-pragma.c  c-pragma.h  c-tree.h  c-typeck.c  c.opt  configure  gimple-low.c  gimplify.c  hooks.c  hooks.h  langhooks-def.h  langhooks.h  omp-builtins.def  omp-low.c  see.c  stor-layout.c  tree-cfg.c  tree-gimple.c  tree-inline.c  tree-into-ssa.c  tree-ssa-operands.c  tree.c  tree.def  tree.h  treestruct.def  varasm.c
osprey-gcc-4.2.0/libcpp/: directives.c  lex.c  macro.c
osprey-gcc/gcc/: Makefile.in  builtin-types.def  builtins.def  c-common.c  c-common.h  c-decl.c  c-opts.c  c-parse.in  c-tree.h  c.opt  cfgexpand.c  cgraph.c  cgraphunit.c  common.opt  diagnostic.c  dwarf2out.c  flags.h  fold-const.c  gcc.c  gcc.h  gimplify.c  gspin-assert.h  gspin-base-types.h  gspin-gcc-interface.h  gspin-list.h  gspin-mempool.h  gspin-tel.h  gspin-tree.h  langhooks-def.h  langhooks.h  main.c  opts.c  passes.c  predict.c  stor-layout.c  system.h  toplev.c  toplev.h  tree-cfg.c  tree-dump.c  (+8 more)
osprey-gcc/targia32_x8664/: CLOBBER  CONFIGURE
osprey-gcc/targia64_ia64/: CLOBBER  CONFIGURE
osprey/arith/: Makefile.gbase  convert.c
osprey/clibinc/: fmath.h  liberrno.h
osprey/cygnus/: Makefile.in
osprey/driver/: DESIGN_DOC  Makefile.gbase  OPTIONS  basic.h  errors.c  file_names.c  file_names.h  file_utils.c  file_utils.h  get_options.c  get_options.h  lang_defs.c  lang_defs.h  license.c  license.h  main.c  objects.c  objects.h  opt_actions.c  opt_actions.h  option_seen.c  options.c  options.h  phases.c  phases.h  run.c  run.h  sort_options.awk  sort_options.csh  special_options.c  string_utils.c  string_utils.h  table.c  uhcaf
osprey/f90modules/: OMP_LIB.mod  OMP_LIB_KINDS.mod
osprey/include/: Makefile.gbase  dwarf.h  dwarf_stuff.h  libdwarf.h  libelf  shmem.c  shmem.h  stamp.h  whirl2c.h
osprey/ir_tools/: Makefile.gbase  ir_a2b.cxx  ir_gdar.c  ir_graph.h  ir_graph_util.c  ir_graph_util.h  ir_size.cxx  ir_walker.c  vcg_whirlview.cxx  vcg_whirlview.h
osprey/kg++fe/: Makefile.gbase  gnu_config.h  omp_directive.cxx  omp_directive.h  omp_types.h  tree_symtab.cxx  tree_symtab.h  tree_verify.cxx  wfe_decl.cxx  wfe_decl.h  wfe_dst.cxx  wfe_expr.cxx  wfe_expr.h  wfe_misc.cxx  wfe_misc.h  wfe_omp_check_stack.cxx  wfe_omp_directives.cxx  wfe_omp_directives.h  wfe_stmt.cxx  wfe_stmt.h
osprey/kgccfe/: Makefile.gbase  c_int_model.c  c_int_model.h  erfe.desc  erfe.h  gnu_config.h  main.c  omp_directive.cxx  omp_directive.h  omp_types.h  tree_symtab.cxx  tree_symtab.h  wfe_decl.cxx  wfe_dst.cxx  wfe_expr.cxx  wfe_expr.h  wfe_misc.cxx  wfe_misc.h  wfe_omp_check_stack.cxx  wfe_omp_check_stack.h  wfe_omp_directives.cxx  wfe_omp_directives.h  wfe_stmt.cxx  wfe_stmt.h
osprey/libF77/: Makefile.gbase  c_abs.c  c_cos.c  c_div.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  d_cnjg.c  d_sign.c  libF77aslibfortran.gmakeinclude  pow_cc.c  pow_ci.c  pow_zi.c  pow_zz.c  r_cnjg.c  rand_.c  s_cat.c  z_abs.c  z_cos.c  z_div.c  z_exp.c  z_log.c  z_sin.c  z_sqrt.c
osprey/libI77/: bcompat.c  bcompat.h  close.c  dfe.c  dfe.h  due.c  due.h  endfile.c  endfile.h  err.c  fmt.c  fmt.h  fmtlib.c  idxio.c  idxio.h  iio.c  iio.h  inquire.c  inquire.h  lib.c  lib.h  lio.c  lread.c  nio.c  nio.h  open.c  open.h  rdfmt.c  rdfmt.h  rewind.h  rsfe.c  rsfe.h  sfe.c  sfe.h  sue.c  sue.h  tools.h  uio.c  wsfe.c  wsfe.h
osprey/libU77/: access_.c  bes.c  chdir_.c  chmod_.c  cmd_line.c  etime_.c  externals.h  gerror_.c  getcwd_.c  getenv_.c  legacy_chmod_.c  malloc_.c  output.c  putenv_.c  rand_.c  rename_.c  secnds_.c  srand_.c  symlnk_.c
osprey/libcaf/: Makefile.gbase  alloc.c  alloc.h  caf_collectives.c  caf_collectives.h  caf_rtl.c  caf_rtl.h  cafrun  collectives.c  collectives.h  collectives_old.c  collectives_old.h  comm.h  env.c  env.h  lock.c  lock.h  profile.c  profile.h  service.c  service.h  team.c  team.h  trace.c  trace.h  util.c  util.h
osprey/libcaf-extra/: Makefile.gbase  caf-extra.caf  caf_broadcasts.caf  caf_reductions.caf  caf_reductions_1d.caf  co_max_wrapper.caf  co_maxval.caf  co_maxval_2tree_events.caf  co_maxval_2tree_syncall.caf  co_maxval_2tree_syncimages.caf  co_maxval_all2all.caf  co_min_wrapper.caf  co_minval.caf  co_minval_2tree_events.caf  co_minval_2tree_syncall.caf  co_minval_2tree_syncimages.caf  co_minval_all2all.caf  co_prod_wrapper.caf  co_product.caf  co_product_2tree_events.caf  co_product_2tree_syncall.caf  co_product_2tree_syncimages.caf  co_product_all2all.caf  co_sum.caf  co_sum_2tree_events.caf  co_sum_2tree_syncall.caf  co_sum_2tree_syncimages.caf  co_sum_all2all.caf  co_sum_wrapper.caf  co_xxx_wrapper.caf  reduce.caf
osprey/libcif/: Makefile.gbase  cif_conv.c  cifclose.c  cifdup.c  ciffree.c  cifgetrec.c  cifmode.c  cifopen.c  cifrel.c  cifspace.c
osprey/libcmplrs/: Makefile.gbase  array_alloc.c  elfmap.c  make_depend.c
osprey/libdwarf/: Makefile.gbase  dwf_forms.c  dwf_frame.c  dwf_section.c
osprey/libelf/: Makefile.gbase  config.h
osprey/libelfutil/: Makefile.gbase  disassembler.c  xlate_address.c  xlate_block_search.c  xlate_expand_reg.c  xlate_expand_reg2.c  xlate_get_all_reg.c  xlate_get_info.c  xlate_get_reg.c  xlate_init_elf.c  xlate_init_fd.c  xlate_named_init_elf.c  xlate_named_init_fd.c  (+7 more)
(+2176 files in other folders)
